--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <!-- Stats Gallery Section -->
   <div class="gallery">
     <div class="thumbnail">
-      <h1 class="stats">1500</h1>
+      <h1 class="stats"><strong>1500</strong><br>
+      </h1>
       <h4>TITLE</h4>
       <p>One line description</p>
     </div>
