--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
         <li><a href="#aboutus">ご案内</a></li>
         <li><a href="#howtouse">ご利用方法</a></li>
         <li><a href="#contact">お問い合わせ</a></li> 
-        <li><a href="#" target="_blank"><img src="images/Instagram.png" alt="Instergram"></a></li>  
+        <li><a href="https://www.instagram.com/usagiya_kugenuma_kaigan/" target="_blank"><img src="images/Instagram.png" alt="Instergram"></a></li>  
     </ul>
 </header> 
 
