--- a/test/index.html
+++ b/test/index.html
@@ -31,12 +31,17 @@
 <!-- ヘッドコンテンツ -->
 <main>
 <div class="headerimg">
-<img src="images/header.png" alt="うさぎ屋ー湘南・鵠沼海岸の古民家スペースー">
+<!-- <img src="images/header.png" alt="うさぎ屋ー湘南・鵠沼海岸の古民家スペースー"> -->
+<div class="img-01"></div>
+<div class="img-02"></div>
+<div class="img-03"></div>
 </div>
 <div class="headerimg_sp">
-    <img src="images/header_sp.png" alt="うさぎ屋ー湘南・鵠沼海岸の古民家スペースー">
-    </div>
-
+    <!-- <img src="images/header_sp.png" alt="うさぎ屋ー湘南・鵠沼海岸の古民家スペースー"> -->
+<div class="img-01sp"></div>
+<div class="img-02sp"></div>
+<div class="img-03sp"></div>
+</div>
 <!-- ご案内 -->
 <section id="aboutus">
 <h1>ご案内</h1>
